finnished LoadAP to load airports from csv to map and other mininor tweeks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "string.h": "c"
+        "*.ejs": "html",
+        "string.h": "c",
+        "flight.h": "c"
     }
 }
