--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "*.ejs": "html",
         "string.h": "c",
-        "flight.h": "c"
+        "flight.h": "c",
+        "mapelem.h": "c",
+        "stringcode.h": "c"
     }
 }
